# trace_analyzer

./: .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool_config.json  AGENTS.md  AGENT_GUIDE.md  BIGQUERY_GUIDE.md  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  server.py  verify_patch.py
.github/: README.md  dependabot.yml
.github/workflows/: ai-code-review.yml  codeql.yml  deploy.yml  nightly_eval.yml  python-app.yml
autosre/: .env.example  README.md  pubspec.yaml
autosre/lib/: app.dart  catalog.dart
autosre/lib/agent/: adk_content_generator.dart
autosre/lib/models/: adk_schema.dart
autosre/lib/pages/: conversation_page.dart  login_page.dart  tool_config_page.dart
autosre/lib/services/: auth_service.dart  project_service.dart  session_service.dart  tool_config_service.dart
autosre/lib/theme/: app_theme.dart
autosre/lib/widgets/: error_placeholder.dart  log_entries_viewer.dart  log_pattern_viewer.dart  metric_chart.dart  remediation_plan.dart  session_panel.dart  tool_log.dart  trace_waterfall.dart
autosre/test/: widget_test.dart
autosre/web/: index.html
deploy/: Dockerfile.gateway  Dockerfile.unified  README.md  deploy.py  deploy_all.py  deploy_gateway.py  deploy_web.py  run_eval.py  test_deploy.py
docs/: GOOGLE_CLOUD_ENHANCEMENTS.md  observability_concepts.md
eval/: README.md  basic_capabilities.test.json  metrics_analysis.test.json  test_evaluate.py  tool_selection.test.json
gcp_observability/: __init__.py  agent.py  prompt.py
gcp_observability/sub_agents/: __init__.py  logs.py  trace.py
gcp_observability/tools/: __init__.py
gcp_observability/tools/clients/: logging.py  monitoring.py  trace.py
gcp_observability/tools/common/: cache.py  decorators.py  telemetry.py
gcp_observability/tools/gcp/: __init__.py  clients.py
gcp_observability/tools/mcp/: bigquery.py  logging.py  monitoring.py  session.py
scripts/: start_dev.py  start_unified.sh
sre_agent/: README.md  __init__.py  agent.py  auth.py  prompt.py  schema.py
sre_agent/services/: __init__.py  session.py  storage.py
sre_agent/sub_agents/: README.md  __init__.py  alerts.py  change.py  logs.py  metrics.py  trace.py
sre_agent/sub_agents/log_analysis/: __init__.py  agents.py
sre_agent/sub_agents/trace_analysis/: __init__.py  agents.py
sre_agent/tools/: README.md  __init__.py  config.py  reporting.py  test_functions.py
sre_agent/tools/analysis/: genui_adapter.py
sre_agent/tools/bigquery/: __init__.py  client.py  otel.py  queries.py  schemas.py
sre_agent/tools/clients/: alerts.py  factory.py  gcp_projects.py  gke.py  logging.py  monitoring.py  slo.py  trace.py
sre_agent/tools/common/: __init__.py  cache.py  decorators.py  telemetry.py
sre_agent/tools/discovery/: discovery_tool.py
sre_agent/tools/gcp/: clients.py  mcp.py
sre_agent/tools/logs/: extraction.py  patterns.py
sre_agent/tools/mcp/: __init__.py  gcp.py
sre_agent/tools/trace/: __init__.py  analysis.py  comparison.py  filters.py
tests/: README.md  conftest.py  test_agent.py  test_agent_execution.py  test_agent_integration.py  test_consolidated_agents.py  test_end_to_end_analysis.py  test_end_to_end_with_mocks.py  test_genui_chat_events.py  test_sre_patterns_e2e.py  test_trace_filter.py  test_trace_selection.py  test_two_stage_agent.py
tests/data/: cascading_timeout_trace.json  connection_pool_trace.json  retry_storm_trace.json
tests/fixtures/: synthetic_otel_data.py
tests/gcp_observability/: test_agent_project_id.py  test_e2e_cujs.py  test_mcp_integration.py  test_orchestration.py  test_schema.py
tests/gcp_observability/e2e/: test_agent_integration.py  test_analysis_e2e.py  test_mocks_e2e.py
tests/gcp_observability/sub_agents/: test_log_pattern_extractor.py
tests/sre_agent/: __init__.py  test_agent_project_id.py  test_cancellation.py  test_e2e_cujs.py  test_mcp_integration.py  test_orchestration.py  test_schema.py  test_session.py
tests/sre_agent/e2e/: test_agent_execution.py  test_agent_integration.py  test_analysis_e2e.py  test_auth_flow.py  test_mocks_e2e.py  test_trace_selection.py
tests/sre_agent/sub_agents/: test_log_pattern_extractor.py  test_logs.py  test_metrics.py
tests/sre_agent/tools/: __init__.py
tests/test_sre_agent/: test_e2e_cujs.py
tests/test_sre_agent/sub_agents/: __init__.py  test_log_pattern_extractor.py
tests/trace_analyzer/: test_agent_project_id.py  test_mcp_integration.py
tests/trace_analyzer/tools/: test_analysis_patterns.py  test_bigquery_otel.py  test_bigquery_otel_comprehensive.py  test_o11y_clients.py  test_o11y_clients_comprehensive.py  test_o11y_clients_extra.py  test_sre_patterns.py  test_statistical_analysis.py  test_trace_analysis.py  test_trace_client_comprehensive.py  test_trace_client_extra.py
toolbox_mcp/: Dockerfile  config.yaml  deploy.sh  server.py
trace_analyzer/: __init__.py  agent.py  prompt.py  prompt_v2.py  requirements.txt  schema.py  telemetry.py
trace_analyzer/.adk/: session.db
trace_analyzer/sub_agents/: __init__.py
trace_analyzer/sub_agents/aggregate/: __init__.py  agent.py  prompt.py
trace_analyzer/sub_agents/causality/: __init__.py  agent.py  prompt.py
trace_analyzer/sub_agents/error/: __init__.py  agent.py  prompt.py
trace_analyzer/sub_agents/investigator/: __init__.py  agent.py  prompt.py
trace_analyzer/sub_agents/latency/: __init__.py  agent.py  prompt.py
trace_analyzer/sub_agents/root_cause/: __init__.py  agent.py  prompt.py
trace_analyzer/sub_agents/service_impact/: __init__.py  agent.py  prompt.py
trace_analyzer/tools/: __init__.py  bigquery_otel.py  o11y_clients.py  sre_patterns.py  statistical_analysis.py  trace_analysis.py  trace_cache.py  trace_client.py  trace_filter.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/layout/: Canvas.tsx  index.ts  (+1 more)
web/e2e/: connection.test.ts
web/lib/: api-client.ts  mock-data.ts  utils.ts
web/types/: a2ui.ts  adk-schema.ts  ag-ui.ts
(+114 files in other folders)
